[package]
name = "course_access"
version = "0.1.0"
edition = "2024"
default-run = "course"

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
chrono = {version = "0.4.38",features = ["serde"]}
sqlx = {version= "0.8.0",features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
]}

[[bin]]
name = "course"
